@@ -134,6 +134,46 @@ if [ -f /tmp/daemontools.upgrade ] ; then # upgrade
     echo "Running Custom Upgrade Script"
     /bin/sh ${shareddir}/boot/rpm.init upgrade
   fi
+  if [ -f ${prefix}/sbin/initsvc ] ; then
+    ${prefix}/sbin/initsvc -status
+  fi
+
+  if [ -f ${prefix}/bin/svok ] ; then
+    ${prefix}/bin/svok ${servicedir}/.svscan/log 2>/dev/null
+    if [ $? -eq 0 ] ; then
+      echo "Giving svscan exactly 5 seconds to exit nicely"
+      if test -f /etc/init/svscan.conf
+      then
+        /sbin/initctl emit qmailstop > /dev/null 2>&1
+      elif test -f /etc/event.d/svscan
+      then
+        /sbin/initctl emit qmailstop > /dev/null 2>&1
+      elif test -f /etc/systemd/system/multi-user.target.wants/svscan.service
+      then
+        /bin/systemctl stop svscan > /dev/null 2>&1
+      elif test -x ${prefix}/sbin/initsvc
+      then
+        if [ -x /etc/init.d/svscan ] ; then
+          ${prefix}/sbin/initsvc -status || /etc/init.d/svscan stop || true
+        else
+          ${prefix}/sbin/initsvc -status || true
+        fi
+        ${prefix}/sbin/initsvc -off || true
+      else
+        if [ -x /etc/init.d/svscan ] ; then
+          /etc/init.d/svscan stop
+        fi
+        /bin/grep "^SV:" /etc/inittab |/bin/grep svscan |/bin/grep respawn >/dev/null
+        if [ $? -eq 0 ] ; then
+          sed -i 's{^SV:{#SV:{' /etc/inittab
+          if [ $? -eq 0 ] ; then
+            /sbin/init q
+          fi
+        fi
+      fi
+      sleep 5
+    fi
+  fi
   if [ -f /etc/init.d/svscan ] ; then
     cmp -s ${prefix}/bin/qmailctl /etc/init.d/svscan >/dev/null 2>&1 || \
       ${cp} ${prefix}/bin/qmailctl /etc/init.d/svscan || true
